Update Semantic Elements in HTML

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -28,15 +28,6 @@ body {
     color: #d9dcd6;
 }
 
-/*
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-*/
 
 .header nav {
     padding-top: 15px;
@@ -47,18 +38,6 @@ body {
 }
 
 /* Merge ul list style in to ul li */
-/* .header div ul {
-    list-style-type: none;
-} */
-
-/*
-.header div ul li {
-    list-style-type: none;
-    display: inline-block;
-    margin-left: 25px;
-}
-*/
-
 .header nav ul li {
     list-style-type: none;
     display: inline-block;
@@ -110,69 +89,23 @@ p {
     background-color: #2589bd;
 }
 
+/* Merge benefit-lead, benefit-brand, benefit-cost into "benefit-content" */
+/* Set margins, colors, text positions, display and max-width to materials */
 .benefit-content {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-/* .benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-} */
-
-
 .benefit-content h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-/* .benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-} */
 
 .benefit-content img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-/* .benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-} */
 
 /* Merge search-engine-optimization, online-reputation-management & social-media-marketing into "content-list"
 set margin, padding, height, font, background color and color */
@@ -185,50 +118,11 @@ set margin, padding, height, font, background color and color */
     color: #ffffff;
 }
 
-/* .search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-} */
-
 /* Merge search-engine-optimization, online-reputation-management & social-media-marketing into "content-list"
 set image max-height */
 .content-list img {
     max-height: 200px;
 }
-
-/* .search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-} */
 
 /* Merge search-engine-optimization, online-reputation-management & social-media-marketing into "content-list"
 set margin and font size */
@@ -236,21 +130,6 @@ set margin and font size */
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-/* .search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-} */
 
 .footer {
     padding: 30px;
