--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -28,7 +28,7 @@ body {
     color: #d9dcd6;
 }
 
-
+/* Set nav contents settings */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -53,6 +53,7 @@ p {
     font-size: 16px;
 }
 
+/* Set main image settings */
 .hero {
     height: 800px;
     width: 100%;
@@ -62,6 +63,7 @@ p {
     background-position: center;
 }
 
+/* set floating settings */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -72,12 +74,14 @@ p {
     margin-left: 25px;
 }
 
+/* Set "content" settings */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* Set "benefits" settings */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -131,6 +135,7 @@ set margin and font size */
     font-size: 36px;
 }
 
+/* Set footer settings */
 .footer {
     padding: 30px;
     clear: both;
